# CMAKE_practice

./: README.md
example1/: CMakeLists.txt
example1/src/: main.cpp
example2/: CMakeLists.txt
example2/somelib/: CMakeLists.txt  foo.cpp
example2/somelib/include/: foo.hpp
example2/somexe/: CMakeLists.txt
example3/someexe/: CMakeLists.txt
example3/somelib/: foo.cpp
example4/: CMakeLists.txt
example4/src/: CMakeLists.txt  foo.hpp  main.cpp
example5/: CMakeLists.txt
example5/someexe/: main.cpp
example6/: CMakeLists.txt
example6/Main/: main.cpp
example6/MathFunctions/: CMakeLists.txt
example6/MathFunctions/include/: MathFunctions.hpp
example6/MathFunctions/src/: mysqrt.cpp
unit_test_practice/gmock_example/: CMakeLists.txt  Calculator.hpp  CalculatorTest.cpp  MockCalculator.hpp
unit_test_practice/simpletest/: CMakeLists.txt  hello_test.cc
unit_test_practice/unittestclass/: CMakeLists.txt  calculator.hpp  test_calculator.cpp
